apps-helm/apps-helm-config-bootstrap/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: ingress
---
apiVersion: v1
kind: Namespace
metadata:
   name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
   name: apps
