apps-helm/apps-helm-config-bootstrap/nginx-alb-ingress-mapper-for-instance-type.yaml
#kubectl apply -f nginx-alb-ingress-mapper-for-instance-type.yaml -n kube-system
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "instance-type-ingress"
  labels:
    app: "instance-type-ingress"
  annotations:
    # more details https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.1/guide/ingress/annotations/#listen-ports
    # trigger the alb-ingress-controller
    kubernetes.io/ingress.class: "alb"
    # set ALB parameters
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "instance"
    #for security we are not allowing access to everyone
    #alb.ingress.kubernetes.io/inbound-cidrs: 185.125.224.20/32,212.86.32.0/19,62.178.175.89/32
    #public subnet id in which ALB needs to be created
    alb.ingress.kubernetes.io/subnets: subnet-07a587cc1b82530b2,subnet-0f43cd9bf24f06961,subnet-08a2019d76cf767ae
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:373612170290:certificate/0e1520d5-1ebf-49cf-b4f7-6325cab280d3
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # port on which to listen traffic req. in following case we are listening only on https
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 8080}, {"HTTPS": 8443}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    # allow 404s on the health check
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/success-codes: "200,404"
spec:
  rules:
  - http:
      paths:
      - path: "/*"
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress-nginx-controller # please note this name must match with nginx service name
            port:
              number: 80
#spec:
#  # forward all requests to nginx-ingress-controller
#  rules:
#  - http:
#      paths:
#      - path: "/*"
#        backend:
#          serviceName: "nginx-ingress-nginx-controller" # please note this name must match with nginx service name
#          servicePort: 80
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: minimal-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /testpath
#        pathType: Prefix
#        backend:
#          service:
#            name: test
#            port:
#              number: 80
